--- a/Labs/Week04_ttests_Lab.Rmd
+++ b/Labs/Week04_ttests_Lab.Rmd
@@ -77,6 +77,7 @@ Task 1 Info Here
 
 * Identify IV(s) and DV(s)
 * State Hypotheses (Independent Samples & Paired Samples)
+* Will do this for 2 research questions, one of which is a paired-samples, and one of which is an independent-samples
 
 ```{r q1, echo = FALSE}
 quiz(caption = 'Test Your Understanding',
